# zed-ipc

./: CMakeLists.txt  LICENSE  README.md  ReleaseNotes.md
include/: sharedMemoryHandler.hpp
src/: consumer.cpp  producer.cpp
